# book-inventory

./: README.md  app.py  book-inventory.csv  books.db  gitignore  layout.html  mkdocs.yml  models.py  pyproject.toml  requirements.txt  rquirements.txt
app/: __init__.py
docs/: index.md
env/: pyvenv.cfg
instance/: books.db
static/css/: admin.css  base.css  template.css
templates/: 404.html  addbook.html  base.html  book.html  edit-book.html  index.html  layout.html  sample.html  stats.html
templates/admin/: index.html
