[tool.poetry]
name = "repl_nix_book-inventory"
version = "0.1.0"
description = ""
authors = ["Replit user <<>>"]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^1.5.3"
requests = "^2.28.2"
SQLAlchemy = "^2.0.5"
Flask = "^2.2.3"
Flask-Admin = "^1.6.1"
Flask-SQLAlchemy = "^3.0.3"
matplotlib = "^3.7.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
